# gradio-sam-prompter

./: README.md  pyproject.toml
demo/sam/: app.py  pyproject.toml
demo/sam2/: app.py  pyproject.toml
demo/sam3/: app.py  pyproject.toml
demo/showcase/: app.py  pyproject.toml
src/sam_prompter/: __init__.py
src/sam_prompter/static/: script.js  style.css  template.html
tests/: _demo.py  _demo_clear.py  _demo_examples.py  _demo_max2.py  _demo_slow.py  _helpers.py  _mock_inference.py  test_alt_key_label.py  test_clear_api.py  test_escape_cancel_box.py  test_examples.py  test_keyboard_n.py  test_max_objects.py  test_processing_lock.py  test_toolbar_wrap_order.py  test_ui.py  test_ui_masks.py  test_ui_maximize.py  test_ui_settings.py  test_ui_state.py  test_ui_upload.py  test_ui_zoom_pan.py  test_unit.py
