[project]
name = "sam2-demo"
version = "0.1.0"
description = "Real SAM2 inference demo using sam-prompter"
requires-python = ">=3.12"
dependencies = [
    "sam-prompter",
    "torch==2.9.1",
    "torchvision>=0.24.1",
    "transformers>=5.2.0",
    "gradio>=6.8.0",
    "Pillow>=12.1.1",
    "numpy>=2.4.2",
    "spaces>=0.47.0",
]

[tool.uv.sources]
sam-prompter = { path = "../../", editable = true }

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ruff.lint.per-file-ignores]
"*.py" = ["INP001"]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
